TrialoftheTitansPackage/main/default/objects/Coding_Assessment__c/Coding_Assessment__c.object-meta.xml
<CustomObject>
    <label>Coding Assessment</label>
    <nameField>
        <displayFormat>CASS-{0000}</displayFormat>
        <label>Coding Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coding Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>