TrialoftheTitansPackage/main/default/objects/Coding_Assessment__c/fields/Passed__c.field-meta.xml
<CustomField>
    <fullName>Passed__c</fullName>
    <label>Passed</label>
    <summaryFilterItems>
        <field>Hero_Apex_Test_Result__c.Passed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Hero_Apex_Test_Result__c.Coding_Assessment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>