TrialoftheTitansPackage/main/default/objects/Coding_Assessment__c/fields/Percent_Passed__c.field-meta.xml
<CustomField>
    <fullName>Percent_Passed__c</fullName>
    <formula>Passed__c / (Failed__c +  Passed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Passed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>