TrialoftheTitansPackage/main/default/objects/Coding_Assessment__c/fields/Titan__c.field-meta.xml
<CustomField>
    <fullName>Titan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Titan</label>
    <referenceTo>Titan__c</referenceTo>
    <relationshipLabel>Coding Assessments</relationshipLabel>
    <relationshipName>Coding_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>