TrialoftheTitansPackage/main/default/objects/Coding_Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Passed__c</columns>
    <columns>Percent_Passed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>